--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
- "name": "resume-website",
+ "name": "Protfoilo Website",
  "version": "0.1.0",
  "private": true,
  "homepage": ".",
@@ -13,7 +13,8 @@
   "@testing-library/user-event": "^13.5.0",
   "react": "^18.2.0",
   "react-dom": "^18.2.0",
-  "react-scripts": "5.0.1",
+  "react-scripts": "^5.0.1",
+  "start": "^5.1.0",
   "web-vitals": "^2.1.4"
  },
  "scripts": {
