--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
  "name": "portfolio-website",
  "version": "0.1.0",
  "private": true,
- "homepage": "/",
+ "homepage": "/SiegeTank-90/github.io/Portfolio",
  "dependencies": {
   "@fortawesome/fontawesome-svg-core": "^6.1.1",
   "@fortawesome/free-brands-svg-icons": "^6.1.1",
