--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
  "name": "portfolio-website",
  "version": "0.1.0",
  "private": true,
- "homepage": "/SiegeTank-90/github.io/Portfolio",
+ "homepage": "/",
  "dependencies": {
   "@fortawesome/fontawesome-svg-core": "^6.1.1",
   "@fortawesome/free-brands-svg-icons": "^6.1.1",
@@ -11,6 +11,7 @@
   "@testing-library/jest-dom": "^5.16.4",
   "@testing-library/react": "^13.3.0",
   "@testing-library/user-event": "^13.5.0",
+  "gh-pages": "^6.3.0",
   "react": "^18.2.0",
   "react-dom": "^18.2.0",
   "react-scripts": "^5.0.1",
@@ -18,6 +19,8 @@
   "web-vitals": "^2.1.4"
  },
  "scripts": {
+   "predeploy": "npm run build",
+   "deploy": "gh-pages -d build",
   "start": "react-scripts start",
   "build": "react-scripts build",
   "test": "react-scripts test",
